# coinbase-tax-calculator

./: .gitignore  NOTICE.md  README.md  calculate_taxes.py  pyproject.toml
coinbase_tax_calculator/: amounts.py  cli.py  coinbase_csv.py  filled_orders.py  futures_tax.py  models.py  spot_btc_tax.py  unified_tax.py
reports/: README.md
tests/: test_calculate_taxes.py  test_cli_contract.py  test_coinbase_csv.py  test_filled_orders_engine.py  test_futures_tax_report.py  test_packaging.py  test_spot_btc_tax.py  test_unified_tax_report.py
tests/fixtures/: btc_cost_basis_fixture.csv
transaction_data/: README.md
